--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "Servidor Graphql usando Express e Express-Graphql -> Json-server",
   "main": "server.js",
   "scripts": {
-    "dev:server": "nodemon server.js"
+    "dev:server": "nodemon server.js",
+    "json:server" : "json-server --watch data.json"
   },
   "author": "Gislaine Jéssica",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.19.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.4",
+    "json-server": "^0.15.1",
     "nodemon": "^1.19.2"
   }
 }
